@@ -1,6 +1,16 @@
 2008-01-28  Zeeshan Ali Khattak  <zeenix@gmail.com>
 
 	* src/av-cp/playlist-treeview.c:
+	* src/av-cp/playlist-treeview.h:
+	* src/av-cp/renderer-controls.c:
+	* src/av-cp/renderer-controls.h:
+
+	Supply metadata to SetAVTransportURI action and retrieve the metadata
+	on the fly each time before setting the URI.
+
+2008-01-28  Zeeshan Ali Khattak  <zeenix@gmail.com>
+
+	* src/av-cp/playlist-treeview.c:
 	* src/av-cp/renderer-combo.c:
 
 	Work around for version-agnostic service proxy retreival/creation.
